--- a/src/pages/History_Page/HistoryPage.css
+++ b/src/pages/History_Page/HistoryPage.css
@@ -26,3 +26,14 @@
 .history-clear-all-button {
   padding: 0.25rem 0.5rem;
 }
+
+@media only screen and (max-width: 750px) {
+  .history-page-header-container {
+    position: relative;
+  }
+  .history-clear-all-button-container {
+    position: fixed;
+    top: 7rem;
+    right: 1rem;
+  }
+}
